syntax = "proto3";
package regen.bond.v1alpha1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/regen-network/regen-ledger/x/bond";

// Bond represents the high-level on-chain information for a bond.
message Bond {

  // id of the bond
  string id = 1;

  // emission_denom is the unique id of emission
  string emission_denom = 2;

  // bond name
  string name = 3;

  // account address of current bond holder
  string holder = 4;

  // parent bond from which the bond was created by selling to a new holder
  string parent_bond = 5;

  // face value
  string face_value = 6;

  // currency of the face value
  string face_currency = 7;

  // date of bond creation
  string creation_date = 8;

  // date of issuance
  google.protobuf.Timestamp issuance_date = 9 [(gogoproto.stdtime) = true];

  // date of maturity
  google.protobuf.Timestamp maturity_date = 10 [(gogoproto.stdtime) = true];

  // coupon rate is the APY of the bond
  double coupon_rate = 11;

  // coupon frequency
  CouponFrequency coupon_frequency = 12;

  // bond status
  Status status = 13;

  // project code to which the bond belongs
  string project = 14;

  // metadata
  bytes metadata = 15;

  // Enumeration of project statuses
  enum Status {

    // Unspecified
    STATUS_UNSPECIFIED = 0;

    // Active
    STATUS_ACTIVE = 1;

    // Closed
    STATUS_CLOSED = 2;

    // Matured
    STATUS_MATURED = 3;
  }

  // Enumeration of coupon frequency
  enum CouponFrequency {

    // Unspecified
    COUPON_FREQUENCY_UNSPECIFIED = 0;

    // Monthly
    COUPON_FREQUENCY_MONTHLY = 1;

    // Quarterly
    COUPON_FREQUENCY_QUARTERLY = 2;

    // Annually
    COUPON_FREQUENCY_ANNUALLY = 3;
  }
}
